--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -2,15 +2,21 @@
 html, body {
   margin: 0px;
   padding:0px;
+  font-family:opensans;
 }
 
+
+@font-face {
+  font-family: opensans;
+  src: url("../fonts/OpenSans-Regular.ttf");
+}
 
 header {
   padding-top: 100px;
   padding-bottom: 50px;
   padding-left: 30px;
   background: black;
-  background-image: url("/img/header.jpg");
+  background-image: url("../img/header.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right;
@@ -25,7 +31,8 @@ h1 {
 
 h2{
   color: #5D5D5D;
-  font-size: 20px;
+  font-size: 22px;
+  font-weight: bolder;
 }
 
 h3{
@@ -59,7 +66,7 @@ nav button:hover {
   cursor: pointer;
 } 
 
-#whoweare, #portfolio, #emailus{
+#whoweare, #portfolio, #emailUs{
   text-align: center;
   background-color: #F2F2F2;
   padding-top: 20px;
@@ -82,33 +89,139 @@ p{
 
 .box {
   display: flex;
-  padding: 0px 20px 0px 20px;
+  padding: 30px;
+  column-gap: 10px;
+  column-rule-style:#5D5D5D;
 }
+
 
 /* Create two equal columns that sits next to each other */
 .column {
   text-align: justify;
   flex: 50%;
   max-width: 50%;
-  padding: 10px;
+ 
+}
+
+#columnWithLine {
+  border-left-color: gainsboro;
+  border-left-width: 1px;
+  border-left-style: solid;
+  padding-left: 8px;;
+}
+
+#servicebox {
+  column-gap: 5px;
+
+}
+
+.column h3 {
+  margin-top: 0px;
 }
 
 .smallercolumn {
   text-align: justify;
   flex: 30%;
   max-width: 30%;
-  padding: 10px;
+
 }
 
 #adimg {
  margin-left: 40px;
  margin-right: 40px;
+ margin-bottom: 10px;
  max-width: 80%;
-
 }
 
 
-#services {
+#services, #location {
   text-align: center;
-  padding-top: 20px;
+  padding-top: 30px;
+}
+
+.fa-stack{
+text-align: center;;
+}
+.fa-cloud , .fa-code, .fa-wifi, .fa-earth-americas, .fa-flag, .fa-gear{
+  color:#61458C;
+}
+
+.fa-wifi {
+  rotate: 45deg;
+}
+
+.fa-circle {
+  color:#D3D3D3;
+}
+
+#portfolio img {
+ height:100px;
+ width: 150px;
+}
+
+iframe {
+  border-radius: 100%;
+  border-color:black;
+  
+
+}
+
+#iframeColumn {
+  text-align: right;
+  margin-right:20px;
+}
+
+#emailUs {
+  background-image: url("../img/map-image.png");
+  background-color: #61458C;
+  color: white;
+  margin-top: 40px;
+}
+
+#emailUs h2 {
+ color:white;
+}
+
+
+label {
+  display:block;
+  line-height: 35px;
+  margin-top: 10px;
+  text-align: right;
+  
+}
+input[type=text], input[type=phone], input[type=email] {
+  display:block;
+  height: 35px;
+  width: 300px;
+  border: 1px solid #000;
+  margin-top: 10px;
+
+}
+
+input[type=submit] {
+  margin-top:10px;
+  width: 80px;
+}
+
+textarea {
+  display:block;
+  height: 60px;
+  width: 300px;
+  border: 1px solid #000;
+  margin-top: 10px;
+}
+
+footer {
+  background-color: #61458C;
+  text-align: right;
+  color:white;
+  font-size: 12px;
+  height:30px;
+  line-height: 30px;
+}
+
+footer a {
+  color:white;
+
 }
