--- a/Entregable2/assets/css/style.css
+++ b/Entregable2/assets/css/style.css
@@ -70,7 +70,7 @@ nav a:hover {
   text-align: center;
   background-color: #f2f2f2;
   padding-top: 20px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
 }
 
 p {
@@ -137,7 +137,7 @@ p {
 }
 
 .fa-solid {
-  transition: 0.5s;
+  transition: 0.3s;
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -166,7 +166,7 @@ p {
   border-radius: 50%;
   border-style: solid;
   padding-bottom: 14px;
-  transition: 0.5s;
+  transition: 0.3s;
 }
 
 .circle:hover,
@@ -176,9 +176,13 @@ p {
   color: white;
 }
 
+#portfolio {
+  padding-bottom:70px;
+}
+
 #portfolio img {
-  height: 160px;
-  width: 250px;
+  height: 130px;
+  width: 200px;
 }
 
 #portfolio img:hover {
@@ -246,8 +250,9 @@ label {
   display: block;
   text-align: right;
   line-height: 36px;
-  margin-top: 10px;
+  padding-bottom: 13px;
 }
+
 input[type="text"],
 input[type="tel"],
 input[type="email"],
@@ -265,7 +270,7 @@ input[type="submit"] {
 }
 
 footer {
-  background-color: #61458c;
+  background-color: #61458C;
   text-align: right;
   color: white;
   font-size: 12px;
