--- a/Entregable2/assets/css/style.css
+++ b/Entregable2/assets/css/style.css
@@ -251,7 +251,7 @@ label {
   line-height: 36px;
   padding-bottom: 13px;
   text-align: left;
-  margin-left: 230px;
+  margin-left: 74%;
 }
 
 input[type="text"],
