--- a/Entregable3/assets/css/style.css
+++ b/Entregable3/assets/css/style.css
@@ -2,12 +2,10 @@
   box-sizing: border-box;
   font-family: opensans;
 }
-
 @font-face {
   font-family: opensans;
   src: url("../fonts/OpenSans-Regular.ttf");
 }
-
 header {
   padding-top: 100px;
   padding-bottom: 50px;
@@ -20,40 +18,31 @@ header {
   height: 260px;
   color: white;
 }
-
 h1 {
   top: auto;
   font-weight: lighter;
 }
-
 h2 {
   color: #5d5d5d;
   font-size: 22px;
   font-weight: bolder;
   padding-bottom: 10px;
 }
-
 h3 {
   color: #5d5d5d;
   font-size: 18px;
   font-weight: 600;
 }
-
 .navbar {
   background-color: #61458c;
 }
-
 .navbar {
   color: white;
 }
-
-
 .nav-link {
   color: white;
   padding-top: 15px;
 }
-
-
 #whoweare,
 #portfolio,
 #emailus {
@@ -61,31 +50,25 @@ h3 {
   padding-top: 30px;
   padding-bottom: 40px;
 }
-
 #whowearecontainer {
   margin-top: 50px;
 }
-
 .container p {
   text-align: justify;
 }
-
 p {
   color: #5d5d5d;
   font-size: 14px;
   font-weight: lighter;
   line-height: 20px;
 }
-
 #whoweareimage {
   float: left;
   margin-right: 10px;
 }
-
 .right-border {
   border-right: 1px solid gainsboro;
 }
-
 #adimg {
   margin-left: 5px;
   margin-right: 0px;
@@ -93,7 +76,6 @@ p {
   max-width: 80%;
   float: right;
 }
-
 #services,
 #location,
 #portfolio,
@@ -103,25 +85,19 @@ p {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-
 #services h3,
 #whoweare h3 {
   text-align: left;
 }
-
-
-
 .fa-stack {
   text-align: center;
 }
-
 .fa-solid {
   transition: 0.3s;
   width: 100%;
   height: 100%;
   border-radius: 50%;
 }
-
 .fa-cloud,
 .fa-code,
 .fa-wifi,
@@ -130,12 +106,10 @@ p {
 .fa-gear {
   color: #61458c;
 }
-
 .fa-wifi {
   margin-left: -10px;
   rotate: 45deg;
 }
-
 .circle {
   display: block;
   height: 70px;
@@ -147,32 +121,26 @@ p {
   padding-bottom: 14px;
   transition: 0.3s;
 }
-
 .circle:hover,
 .fa-solid:hover {
   background-color: #61458c;
   border-color: #61458c;
   color: white;
 }
-
 #portfolio {
   padding-bottom: 70px;
 }
-
 #portfolio img {
   height: 130px;
   width: 200px;
   margin-top: 10px;
 }
-
 #portfolio img:hover {
   animation: rotation 2s;
 }
-
 #animatedImage img:hover {
   animation: rotationComplete 2s;
 }
-
 @keyframes rotation {
   0% {
     transform: rotate(0deg);
@@ -184,7 +152,6 @@ p {
     transform: rotate(0deg);
   }
 }
-
 @keyframes rotationComplete {
   0% {
     transform: rotate(0deg);
@@ -198,13 +165,11 @@ p {
     border-radius: 0%;
   }
 }
-
 iframe {
   border-radius: 100%;
   border: 2px solid black;
   text-align: center;
 }
-
 #emailus {
   background-image: url("../img/map-image.png");
   background-size: cover;
@@ -212,29 +177,22 @@ iframe {
   color: white;
   margin-top: 40px;
 }
-
 #emailus h2 {
   color: white;
 }
-
-
 #emailus .row {
   margin-top: 10px;
 }
-
 .form-group {
   text-align: right;
 }
-
 textarea {
   height: 75px;
 }
-
 #submitButtonContainer {
   margin-top: 10px;
   text-align: center;
 }
-
 footer {
   background-color: #62468c;
   text-align: right;
@@ -243,141 +201,100 @@ footer {
   height: 30px;
   line-height: 30px;
 }
-
 footer a {
   color: white;
 }
-
-
-
 @media only screen and (max-width: 576px) {
   header {
     background-image: url("../img/header-mini.png");
     height: 250px;
   }
-
   .container {
-    padding-top:15px;
+    padding-top: 15px;
   }
-
   h2 {
     font-size: 32px;
     font-weight: bolder;
-    color: #4E4E4E;
+    color: #4e4e4e;
   }
-
   h3 {
     font-weight: bolder;
     color: #333333;
     font-size: 20px;
-
   }
-
-  #whoweare_paragraph{
+  #whoweare_paragraph {
     padding-left: 30%;
     padding-right: 30%;
-
   }
-
   iframe {
     margin-top: 20px;
   }
-
   .navbar-toggler {
     right: 20px;
     border-color: white;
   }
-
   #navbarNav {
     margin-top: 10px;
     border-top: 1px solid white;
   }
-
   .right-border {
     border-right: none;
   }
-
   #adimg {
     display: none;
   }
-
   #article_location p {
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
   }
-
   .form-group {
     text-align: left;
   }
-
-    #emailus label {
-      font-weight: 1000 ;
-      
-    }
-
-    strong {
-      font-weight: bold;
-      color: black;
-    }
-
-   #portfolio p {
-      padding-left: 30%;
-      padding-right: 30%;
-
-    }
-
-
- 
+  #emailus label {
+    font-weight: 1000;
+  }
+  strong {
+    font-weight: bold;
+    color: black;
+  }
+  #portfolio p {
+    padding-left: 30%;
+    padding-right: 30%;
+  }
 }
-
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
   header {
     background-image: url("../img/header-mini.png");
     height: 250px;
   }
-
-  
-
   h2 {
     font-size: 26px;
   }
-
   iframe {
     margin-top: 20px;
   }
-
   .right-border {
     border-right: none;
   }
-
   #adimg {
     display: none;
   }
-
   #article_location p {
     text-align: center;
     padding-top: 20px;
     padding-bottom: 20px;
   }
-
   #services .container {
-    padding-top:20px
+    padding-top: 20px;
   }
-
-
-
 }
-
-
 @media only screen and (min-width: 1200px) {
   header {
     background-image: url("../img/header.jpg");
     height: 250px;
   }
-
   #article_location p {
-    padding-top:30px;
+    padding-top: 30px;
   }
-
 }
